--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "chromedriver": "^128.0.3",
     "react-scripts": "^5.0.1",
     "selenium-webdriver": "^4.24.1"
